modifying clinical trials column

--- a/src/shared/components/trials/styles/molecularmatchIcon.module.scss
+++ b/src/shared/components/trials/styles/molecularmatchIcon.module.scss
@@ -1,56 +1,56 @@
 .molecularmatch-icon-image {
-  width: 24px;
-  height: 24px;
-  line-height: 24px;
-  -webkit-background-size: 200px;
-  background-size: 200px;
+  width: 29px;
+  height: 29px;
+  line-height: 29px;
   display: block !important;
+  background-position: 0 0;
 }
 
-.molecularmatch-icon-image.count1 {
-  background-position: -13px -12px;
+.count0 {
+  background-position: -5px -0px;
 }
 
-.molecularmatch-icon-image.count2 {
-  background-position: -38px -12px;
+.count1 {
+  background-position: -34px -0px;
 }
 
-.molecularmatch-icon-image.count3 {
-  background-position: -63px -12px;
+.count2 {
+  background-position: -34px -34px;
 }
 
-.molecularmatch-icon-image.count4 {
-  background-position: -88px -12px;
+.count3 {
+  background-position: -63px -34px;
 }
 
-.molecularmatch-icon-image.count5 {
-  background-position: -113px -12px;
+.count4 {
+  background-position: -5px -68px;
 }
 
-.molecularmatch-icon-image.count6 {
-  background-position: -138px -12px;
+.count5 {
+  background-position: -34px -68px;
 }
 
-.molecularmatch-icon-image.count7 {
-  background-position: -13px -44px;
+.count6 {
+  background-position: -63px -68px;
 }
 
-.molecularmatch-icon-image.count8 {
-  background-position: -38px -44px;
+.count7{
+  background-position: -5px -102px;
 }
 
-.molecularmatch-icon-image.count9 {
-  background-position: -63px -44px;
+.count8 {
+  background-position: -34px -102px;
 }
 
-.molecularmatch-icon-image.count10 {
-  background-position: -13px -74px;
+.count9 {
+  background-position: -63px -102px;
 }
 
-.molecularmatch-icon-image.countexceed-10 {
-  background-position: -38px -74px;
+.count10 {
+  background-position: -63px -0px;
 }
 
-.molecularmatch-icon-image.count0 {
-  background-position: -63px -74px;
+.countexceed-10 {
+  background-position: -5px -34px;
 }
+
